refactor: Lombok 의존성 제거. DTO를 Record로 설계